schema/testdata/validation_expression_in_array/schema.keel
model Post {
    fields {
        authors Author[]
    }

    @permission(
        expression: "bob" in post.authors.name,
        actions: [get]
    )
}

model Author {
    fields {
        name Number
    }
}
